Cost Period vertically aligned  top

--- a/Index.html
+++ b/Index.html
@@ -367,7 +367,7 @@
 														</p>
 													</div>
 												</td>
-												<td class='text-right'>
+												<td class='text-right vtop'>
 													<span style='display:inline-block;'>Cost<input style='display:inline-block;' data-bind="value: expenseAmount" class="price form-control" />
 													Period<select  data-bind="options: expensePeriods, optionsText: 'expensePeriodName', value: expensePeriod" ></select></span>
 												</td>	
